--- a/spotify-clone/src/pages/index.astro
+++ b/spotify-clone/src/pages/index.astro
@@ -1,14 +1,10 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import Layout from "../layouts/Layout.astro";
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body>
-
-	</body>
+  <body>
+    <Layout />
+  </body>
 </html>
