--- a/spotify-clone/src/layouts/Layout.astro
+++ b/spotify-clone/src/layouts/Layout.astro
@@ -1,37 +1,43 @@
 ---
 import AsideMenu from "../components/AsideMenu.astro";
-
-
 ---
+
 <!doctype html>
 <html lang="en">
   <body>
     <div id="app" class="relative h-screen p-2 gap-2">
-      <aside
-        class="[grid-area:aside] flex-col flex overflow-y-auto bg-blue-100"
-      >
+      <aside class="[grid-area:aside] flex-col flex overflow-y-auto">
         <AsideMenu />
       </aside>
-      <main class="[grid-area:main] rounded-lg bg-zinc-900 overflow-y-auto">MAIN</main>
-      <footer class="[grid-area:player]  min-h-[100px] bg-green-200"></footer>
+      <main class="[grid-area:main] rounded-lg bg-zinc-900 overflow-y-auto">
+        MAIN
+      </main>
+      <footer class="[grid-area:player] min-h-[100px] bg-green-200"></footer>
     </div>
+  </body>
+
+  <style>
+    #app {
+      display: grid;
+      grid-template-areas:
+        "aside main main"
+        "player player player";
+      grid-template-columns: 350px 1fr;
+      grid-template-rows: 1fr auto;
+    }
+  </style>
+
+  <style is:global>
+    html {
+      font-family: "CircularStd", system-ui, sans-serif;
+      background: #000000;
+    }
+    @font-face {
+      font-family: "CircularStd";
+      src: url("/fonts/circular-std-medium-500.ttf") format("ttf");
+      font-weight: 500;
+      font-style: normal;
+      font-display: swap;
+    }
+  </style>
 </html>
-
-<style>
-  #app {
-    display: grid;
-    grid-template-areas:
-      "aside main main"
-      "player player player";
-    grid-template-columns: 350px 1fr;
-    grid-template-rows: 1fr auto;
-  }
-</style>
-
-<style is:global>
-  html {
-    font-family: system-ui, sans-serif;
-    background: #121212;
-  }
-</style>
-</body>
