--- a/spotify-clone/src/components/AsideMenu.astro
+++ b/spotify-clone/src/components/AsideMenu.astro
@@ -18,6 +18,14 @@ import SideMenuItem from "./SideMenuItem.astro";
       </SideMenuItem>
     </ul>
   </div>
+
+  <div class="bg-zinc-900 rounded-lg p-2 flex-1">
+    <ul>
+      <SideMenuItem href="/">
+        <LibraryIcon/>
+        Your library
+      </SideMenuItem>
+    </ul>
+  </div>
 </nav>
 
-<LibraryIcon />
